--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -1,28 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Microverse Challenge</title>
+    <link rel="stylesheet" href="trading.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+        rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="./fontawesome-free-5.15.4-web/css/all.min.css">
+</head>
+<body>
+    <header>
+        <nav class="nav-bar">
+            <div class="menu">
+                <div class="menu-lines"></div>
+                <div class="menu-lines"></div>
+                <div class="menu-lines"></div>
+            </div>
+            <div class="original_trombones"> <i class="fal fa-trumpet"></i><img src="./trumpet.png" alt="trumpet" class="icon"> &nbsp; Original Trombones</a></div>
+            <div><a href="#" class="Features">Features</a></div>
+            <div><a href="#" class="How_it_works">How it work</a></div>
+            <div><a href="#" class="Pricing">Pricing</a></div>
+        </nav>
+    </header>
+    <main class="main">
+        <h1>HandCrafed, home-made masterpieces</h1>
+        <div><input type="text" name="email" placeholder="Put your email address"></div>
+        <button class="my_button">GET STARTED</button><br>
+        <div class="premium_material">
+            <i class="fas fa-fire fire_icon icon_item"></i>
+            <!-- <img src="./fireIcon.jpeg" alt="fire-icon" class="fire-icon" > -->
+            <div class="title_item">
+                <h3>Premium material</h3>
+                <p class="p_item">Dignissimos veriatis, facere pariatur a laudantium mollitia ipsa eos alias</p>
+            </div>
+        </div>
+    </main>
+    <footer></footer>
+    <script>
 
-  <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <h2>Hello World! We are software developpers !</h2>
 
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
-    <script  src="js/index.js"></script>
-  </body>
+        
+    </script>
+</body>
 </html>
