--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -6,14 +6,16 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="./fontawesome-free-5.15.4-web/css/all.min.css">
   </head>
+    <body>
+      <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <div class="main">
       <header id="header">
         <img src="" alt="" id="header-image">
         <nav id="nav-bar">
           <ul>
-            <li><a href="#" class="nav-link">Features</a> </li>
-            <li><a href="#" class="nav-link">How it works</a></li>
-            <li><a href="#" class="nav-link"> Pricing</a></li>
+            <li><a href="#feature" class="nav-link">Features</a> </li>
+            <li><a href="#how-it-works" class="nav-link">How it works</a></li>
+            <li><a href="#pricing" class="nav-link"> Pricing</a></li>
           </ul>
         </nav>
       </header>
@@ -46,8 +48,19 @@
             we will ensure there are no damages or faults and we will check and test the pitch of your instrument.
           </p>
         </div>
+        <section id="feature">
+          <h2>This is Feature</h2>
+        </section>
+
+        <section id="how-it-works">
+          <h2>How it works</h2>
+        </section>
+
+        <section id="pricing">
+          <h2>Pricing</h2>
+        </section>
         <section id="video">
-          <video src="https://youtu.be/y8Yv4pnO7qc" id="video"></video>
+          <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <div class="cards-container">
           <div class="card-item">
@@ -93,16 +106,12 @@
     </div>
 
     <!--
-
     Hello Camper!
-
     For now, the test suite only works in Chrome!
     Please read the README below in the JS Editor before beginning.
     Feel free to delete this message once you have read it.
     Good luck and Happy Coding!
-
     - The freeCodeCamp Team
-
     -->
     <script  src="js/index.js"></script>
   </body>
