--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="fontawesome-free-5.15.4-web 2/css/all.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d614fc8c85.js" crossorigin="anonymous"></script>
   </head>
   <body>
   
